13 Jan 2018
update: installer not write config files if empty values
update: explicitly set variable
update: announce.php
update: template to show current PHP version
update: PHP7.2
update: install not continue if fields are blank
fix: install back button and bad write config
update: README.md

12 Jan 2018
add: default .php_cs - rules used
update: run php-cs-fixer --rules=@PSR2

11 Jan 2018
fix: delete torrent xbt cleanup name 
fix: admin+ delete bot messages in AJAX Chat
update: hide latest forum posts
update: hide torrent scroller when less than 10 torrent posters
add: version number when site not in production
fix: logout using the salt
update: use of salts

10 Jan 2018
fix: missing lang vars
fix: queries affected by 'only_full_group_by'
update: README.md add utf8 to mysqld.cnf
add: searchcloud to initial database data
update: begin update queries for sql_mode=only_full_group_by(stoc​k mysql default), i have been using stock Percona without issue
add: explicit globals

9 Jan 2018
fix: trivia_update when 0 questions in db
fix: uptime not showing when 0 queries
update: lastest_user cache
move: adminer into iframe
remove: unnecessary css

8 Jan 2018
add: adminer database manager
remove: king icon showing for all
fix: icon size in news
update: minified css/js files
move: fontawesome fonts to local
move: google fonts to local

7 Jan 2018
update: database
update: config.php
remove: forums link
remove: forums
update: use of dirname
update: announce.php
revert: changes to imdb class
fix: typo in lang files

6 Jan 2018
fix: global block uploadapp.php
fix: uploadapp.php
move: jquery to local file
replace: many relative urls with full url

5 Jan 2108
fix: login bug

4 Jan 2018
remove: ipToStorageFormat function
fix: admin/bans.php
fix: first user status pending
add: error message for pending users attempting to login

2 Jan 2018
update: README
remove: trivia questions to separate sql install
update: trivia to not refresh when game closed